--- a/docs/examples.qmd
+++ b/docs/examples.qmd
@@ -20,38 +20,38 @@ ip.display_formatter.formatters["text/plain"] = plain_pretty_formatter
 ```
 
 ::: {.callout-note}
-This library provides bindings to the PxWeb API but is not affiliated with the PxWeb project. These examples do not go into detail about how the PxWeb API behaves or responds. For more information about the API itself, check out the official [specification](https://github.com/PxTools/PxApiSpecs).
+This library provides a Python client for the PxWeb API, but is not affiliated with the PxWeb project. The examples do not go into detail about how the PxWeb API behaves or responds. For more information about the API itself, check out the official [specification](https://github.com/PxTools/PxApiSpecs).
 :::
 
 ## Basic setup and exploration
-The first step is to set up a PxWebApi object to use.
+The first step is to set up a PxApi object to use.
 
 ```{python}
-from pxweb import PxWebApi
+from pxweb import PxApi
 
 # Use the builtin known API instead of a URL
-api = PxWebApi("scb")
+api = PxApi("scb")
 
 api
 ```
 
-We can check out information about the API, including languages supported, by using `~~.PxWebApi.get_config()`.
+We can check out information about the API, including languages supported, by using `~~.PxApi.get_config()`.
 
 ```{python}
 api.get_config()
 ```
 
-If we want to change the language, we can do so by changing an attribute of the `PxWebApi` object like so:
+If we want to change the language, we can do so by changing an attribute of the `PxApi` object like so:
 `api.language = "en"`
 This will change the response language for all subsequent queries to the API.
 
-From here we can also browse around and get data. Checking out all tables available is doable with `~~.PxWebApi.all_tables()`, but probably a bit overwhelming.
+From here we can also browse around and get data. Checking out all tables available is doable with `~~.PxApi.all_tables()`, but probably a bit overwhelming.
 
 ```{python}
 api.all_tables()
 ```
 
-Tables are organised into subjects and are categorised into different `paths`. To see all paths available, use `~~.PxWebApi.get_paths()`.
+Tables are organised into subjects and are categorised into different `paths`. To see all paths available, use `~~.PxApi.get_paths()`.
 
 ```{python}
 api.get_paths()
@@ -63,14 +63,14 @@ It's also possible to filter the paths, for example to get all paths related to 
 api.get_paths(path_id="BE")
 ```
 
-To get all tables that are in specific path you can use `~~.PxWebApi.tables_on_path()`. Here we take a closer look at "Folkmängd".
+To get all tables that are in specific path you can use `~~.PxApi.tables_on_path()`. Here we take a closer look at "Folkmängd".
 
 ```{python}
 api.tables_on_path(path_id="BE0101A")
 ```
 
 ## Searching for tables
-It's also possible to search for tables using the `~~.PxWebApi.search()` method.
+It's also possible to search for tables using the `~~.PxApi.search()` method.
 
 ```{python}
 # Keeping it simple and just look for tables updated in the past 30 days matching the query string
@@ -88,9 +88,9 @@ We can also get the labels and ID's, or any other metadata, to find out more.
 ```
 
 ## Getting table metadata
-There are two methods to get table metadata. You can get the full metadata information by simply calling `~~.PxWebApi.get_table_metadata()`.
+There are two methods to get table metadata. You can get the full metadata information by simply calling `~~.PxApi.get_table_metadata()`.
 
-If you're interested in the details about variables of a table you can also use `~~.PxWebApi.get_table_variables()`. This method returns information in a more condensed way which may be easier to overview.
+If you're interested in the details about variables of a table you can also use `~~.PxApi.get_table_variables()`. This method returns information in a more condensed way which may be easier to overview.
 
 ```{python}
 # Use the table ID
@@ -103,7 +103,7 @@ tab_vars.get("Region")
 As can be seen above `elimination` is `True` for `"Region"`, so the variable can be skipped over. But there's also a few code lists associated with the variable.
 
 ### Code lists
-Getting information about code lists can be done with `~~.PxWebApi.get_code_list()`. 
+Getting information about code lists can be done with `~~.PxApi.get_code_list()`. 
 
 ```{python}
 # Fetching and unpacking 'values' of 'vs_RegionValkrets99'
@@ -113,7 +113,7 @@ api.get_code_list("vs_RegionValkrets99").get("values")
 The codes can then be used in a query for a selection based on the code list. More on that in [Getting table data](#getting-table-data).
 
 ## Getting table data
-To get data with `~~.PxWebApi.get_table_data()`  we need a few things.
+To get data with `~~.PxApi.get_table_data()`  we need a few things.
 
 - A table ID
 - A selection of value codes from variables
