--- a/docs/examples.qmd
+++ b/docs/examples.qmd
@@ -230,6 +230,14 @@ import logging
 # Set the log level to debug for the root logger which will affect all loaded modules, which can be quite noisy
 logging.basicConfig(level=logging.DEBUG)
 
+```
+
+```{python}
+# | echo: false
+import logging
+```
+
+```{python}
 # Or set up a handler just for pxwebpy
 handler = logging.StreamHandler()
 handler.setFormatter(
@@ -237,4 +245,7 @@ handler.setFormatter(
 )
 logging.getLogger("pxweb").addHandler(handler)
 logging.getLogger("pxweb").setLevel(logging.DEBUG)
+
+# Set up an API object with the logging enabled
+ssb = PxApi("ssb")
 ```
